name:
  asm-c64
version:
  0.4.0
synopsis:
  Files specific to the C64 platform
homepage:
  https://github.com/alexkazik/asm
license:
  BSD3
license-file:
  LICENSE
author:
  ALeX Kazik
maintainer:
  alex@kazik.de
copyright:
  2017 ALeX Kazik
category:
  Compilers/Interpreters
build-type:
  Simple
cabal-version:
  >= 1.10

library {
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  ghc-options: {
    -Wall
  }
  exposed-modules: {
    Asm.C64
    Asm.C64.Colors
    Asm.C64.Image
    Asm.C64.Image.Embed
    Asm.C64.Include
    Asm.C64.Include.Basic
    Asm.C64.Include.Hardware
    Asm.C64.Include.Kernal
    Asm.C64.Suffixed
    Asm.C64.Vice
  }
  build-depends:
    { asm-core == 0.4.*
    , asm-data == 0.4.*
    , asm-parser == 0.4.*
    , asm-tools == 0.4.*
    , asm-cpu6502 == 0.4.*
    , base
    , bytestring
    , containers
    , JuicyPixels
    , syb
    , template-haskell
    , text
    , vector
    }
  default-extensions: {
    BinaryLiterals
    DefaultSignatures
    DeriveDataTypeable
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    QuasiQuotes
    ScopedTypeVariables
    StandaloneDeriving
  }
}
