name:
  asm-core
version:
  0.4.1
synopsis:
  The abstract assembler itself
homepage:
  https://github.com/alexkazik/asm
license:
  BSD3
license-file:
  LICENSE
author:
  ALeX Kazik
maintainer:
  alex@kazik.de
copyright:
  2017 ALeX Kazik
category:
  Compilers/Interpreters
build-type:
  Simple
cabal-version:
  >= 1.10

flag DebugCompiler
  Description: Enable debugging the compiler.
  Default: False
flag DisableLocal
  Description: Disable local variables (handle them just as var).
  Default: False

library {
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  ghc-options: {
    -Wall
  }
  if flag(DebugCompiler)
    cpp-options:       -DDEBUG_COMPILER
  if flag(DisableLocal)
    cpp-options:       -DDISABLE_LOCAL
  exposed-modules: {
    Asm.Core
    Asm.Core.Compiler
    Asm.Core.Data.ByteVal
    Asm.Core.Data.ByteValPiece
    Asm.Core.Data.ByteValPiece.Combine
    Asm.Core.Data.Cpu
    Asm.Core.Data.CpuData
    Asm.Core.Data.FunctionKey
    Asm.Core.Data.FunctionKey.Internal
    Asm.Core.Data.KindDefinition
    Asm.Core.Data.MetaKey
    Asm.Core.Data.MetaKey.Internal
    Asm.Core.Data.Reference
    Asm.Core.Data.Ternary
    Asm.Core.Data.Tree
    Asm.Core.Data.TypeDefinition
    Asm.Core.Data.VariableType
    Asm.Core.File
    Asm.Core.Flags
    Asm.Core.Phase1.Compiler
    Asm.Core.Phase1.CompilerState1
    Asm.Core.Phase1.Data.CompilerState1
    Asm.Core.Phase1.Data.Expr12
    Asm.Core.Phase1.Data.InitTree
    Asm.Core.Phase1.Data.Stmt1
    Asm.Core.Phase1.RegisterNames
    Asm.Core.Phase2.Compiler
    Asm.Core.Phase2.CompilerState2
    Asm.Core.Phase2.Data.CompilerState2
    Asm.Core.Phase2.Data.Stmt2
    Asm.Core.Phase2.LookupNames
    Asm.Core.Phase2.RegisterTypes
    Asm.Core.Phase3.CallPath
    Asm.Core.Phase3.Compiler
    Asm.Core.Phase3.CompilerState3
    Asm.Core.Phase3.Data.CompilerState3
    Asm.Core.Phase3.Data.Expr3
    Asm.Core.Phase3.Data.Stmt3
    Asm.Core.Phase3.MetaData
    Asm.Core.Phase3.MetaDataApply
    Asm.Core.Phase3.PlaceInPool
    Asm.Core.Phase3.Pool
    Asm.Core.Phase4.Compiler
    Asm.Core.Phase4.CompilerState4
    Asm.Core.Phase4.Data.CompilerResult
    Asm.Core.Phase4.Data.CompilerState4
    Asm.Core.Phase4.Data.Expr4
    Asm.Core.Phase4.Data.MapExpr4
    Asm.Core.Phase4.Data.PoolData
    Asm.Core.Phase4.Data.Stmt4
    Asm.Core.Phase4.Pool
    Asm.Core.Phase4.PoolData
    Asm.Core.Phase4.PoolState
    Asm.Core.Phases.Data.PoolDefinition
    Asm.Core.Phases.Data.CompilerState1234
    Asm.Core.Phases12.Data.CompilerState12
    Asm.Core.Phases34.Data.CompilerState34
    Asm.Core.Phases34.Data.Function
    Asm.Core.Phases34.Data.PoolState
    Asm.Core.Phases34.EvaluateExpr
    Asm.Core.Phases34.Function
    Asm.Core.Phases34.Function.Address
    Asm.Core.Phases34.Function.Boolean
    Asm.Core.Phases34.Function.Check
    Asm.Core.Phases34.Function.Data
    Asm.Core.Phases34.Function.Generate
    Asm.Core.Phases34.Function.GenerateArgType
    Asm.Core.Phases34.Function.Integer
    Asm.Core.Phases34.TypeDefinition
    Asm.Core.Prelude
    Asm.Core.PrettyPrint
    Asm.Core.PrettyPrint.PPSM
    Asm.Core.PrettyPrint.Pretty
    Asm.Core.PrettyPrint.PrettyPrint
    Asm.Core.PrettyPrint.PrettySrc
    Asm.Core.PrettyPrint.Use
    Asm.Core.SourcePos
    Asm.Core.SourcePos.Quasi
    Asm.Core.SourcePos.Type
  }
  build-depends:
    { asm-data == 0.4.1
    , base
    , bytestring
    , classy-prelude
    , containers
    , directory
    , file-embed
    , filepath
    , megaparsec
    , mtl
    , prettyprinter
    , prettyprinter-ansi-terminal
    , scientific
    , split
    , template-haskell
    , terminal-size
    , text
    , th-utilities
    , vector
    }
  default-extensions: {
    BinaryLiterals
    DefaultSignatures
    DeriveDataTypeable
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
  }
}
