name:
  asm-cpu6809
version:
  0.5.0
synopsis:
  The 6809 Cpu specific parts of the assembler
homepage:
  https://github.com/alexkazik/asm
license:
  BSD3
license-file:
  LICENSE
author:
  ALeX Kazik
maintainer:
  alex@kazik.de
copyright:
  2017 ALeX Kazik
category:
  Compilers/Interpreters
build-type:
  Simple
cabal-version:
  >= 1.10

library {
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  ghc-options: {
    -Wall
  }
  exposed-modules: {
    Asm.Cpu6809
    Asm.Cpu6809.Compiler.Function
    Asm.Cpu6809.Compiler.Phase2
    Asm.Cpu6809.Compiler.Phase3
    Asm.Cpu6809.Compiler.Phase4
    Asm.Cpu6809.Compiler.Phase5
    Asm.Cpu6809.Data.Cpu6809
    Asm.Cpu6809.Data.CpuData6809
    Asm.Cpu6809.Data.CpuSource6809
    Asm.Cpu6809.Data.FunctionKey
    Asm.Cpu6809.Data.MetaKey
    Asm.Cpu6809.Data.OpCodes
    Asm.Cpu6809.OpCodes.Generator
    Asm.Cpu6809.OpCodes.Parser
    Asm.Cpu6809.OpCodes.Quote
    Asm.Cpu6809.Parser
    Asm.Cpu6809.Parser.CpuStmt
    Asm.Cpu6809.Suffixed
  }
  build-depends:
    { asm-core == 0.5.0
    , asm-data == 0.5.0
    , asm-parser == 0.5.0
    , base
    , containers
    , extra
    , heredoc
    , syb
    , template-haskell
    , text
    , vector
    }
}
