name:
  asm-data
version:
  0.4.1
synopsis:
  Data structures used by the assembler but not specific to it
homepage:
  https://github.com/alexkazik/asm
license:
  BSD3
license-file:
  LICENSE
author:
  ALeX Kazik
maintainer:
  alex@kazik.de
copyright:
  2017 ALeX Kazik
category:
  Compilers/Interpreters
build-type:
  Simple
cabal-version:
  >= 1.10

library {
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  ghc-options: {
    -Wall
  }
  exposed-modules: {
    Asm.Data.BitList
    Asm.Data.ByteValSimple
    Asm.Data.InfInt64
    Asm.Data.Ternary
    Asm.Data.Word256
  }
  other-modules: {
    Asm.Data.Ternary.Internal
  }
  build-depends:
    { base
    }
  default-extensions:  {
    BinaryLiterals
    DefaultSignatures
    DeriveDataTypeable
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    QuasiQuotes
    ScopedTypeVariables
    StandaloneDeriving
  }
}
