name:
  asm-parser
version:
  0.4.1
synopsis:
  A parser for the assembler
homepage:
  https://github.com/alexkazik/asm
license:
  BSD3
license-file:
  LICENSE
author:
  ALeX Kazik
maintainer:
  alex@kazik.de
copyright:
  2017 ALeX Kazik
category:
  Compilers/Interpreters
build-type:
  Simple
cabal-version:
  >= 1.10

flag DebugCompiler
  Description: Enable debugging the compiler.
  Default: False

library {
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  ghc-options: {
    -Wall
  }
  if flag(DebugCompiler)
    cpp-options:       -DDEBUG_COMPILER
  exposed-modules: {
    Asm.Parser
    Asm.Parser.BuildTree
    Asm.Parser.Data.Haskell
    Asm.Parser.Data.Int64Value
    Asm.Parser.Data.LabelIdValue
    Asm.Parser.Data.LabelName
    Asm.Parser.Data.MagicValue
    Asm.Parser.Data.PExpr
    Asm.Parser.Data.PStmt
    Asm.Parser.Data.ToArray
    Asm.Parser.Data.ToByte
    Asm.Parser.Data.ToExpr
    Asm.Parser.Data.ToStructOrUnion
    Asm.Parser.DirectBlock
    Asm.Parser.Parser
    Asm.Parser.Parser.Basic
    Asm.Parser.Parser.Class
    Asm.Parser.Parser.Expr
    Asm.Parser.Parser.Haskell
    Asm.Parser.Parser.Int64Value
    Asm.Parser.Parser.Integer
    Asm.Parser.Parser.LabelIdValue
    Asm.Parser.Parser.Stmt
    Asm.Parser.Parser.Tools
    Asm.Parser.Quote
    Asm.Parser.StripComments
    Asm.Parser.ToCompiler.Expr
    Asm.Parser.ToCompiler.PCState
    Asm.Parser.ToCompiler.Stmt
  }
  build-depends:
    { asm-core == 0.4.1
    , asm-data == 0.4.1
    , base
    , classy-prelude
    , containers
    , filepath
    , megaparsec
    , mtl
    , scientific
    , split
    , template-haskell
    , terminal-size
    , text
    , vector
    , wl-pprint-text
    }
  default-extensions: {
    BinaryLiterals
    DefaultSignatures
    DeriveDataTypeable
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    QuasiQuotes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
  }
}
