name:
  demo
version:
  0.4.2
synopsis:
  A few demo programs using the assembler
homepage:
  https://github.com/alexkazik/asm
license:
  BSD3
license-file:
  LICENSE
author:
  ALeX Kazik
maintainer:
  alex@kazik.de
copyright:
  2017 ALeX Kazik
category:
  Compilers/Interpreters
build-type:
  Simple
cabal-version:
  >= 1.10

executable demo
  default-language:
    Haskell2010
  hs-source-dirs:
    app
  ghc-options: {
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N
  }
  main-is:
    Main.hs
  build-depends:
    -- assembler
    { demo
    -- other resources
    , base
    , bytestring
    , directory
    , filepath
    , optparse-applicative
    }
  default-extensions: {
    NoImplicitPrelude
    OverloadedStrings
    QuasiQuotes
  }

library {
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  ghc-options: {
    -Wall
  }
  exposed-modules: {
    Demo.C64.Image
    Demo.Multi.UnRLE
    Demo.Output
  }
  build-depends:
    -- assembler
    { asm-core == 0.4.1
    , asm-c64 == 0.4.1
    , asm-cpu6809 == 0.4.2
    , asm-cpu6502 == 0.4.1
    -- other resources
    , base
    , bytestring
    , heredoc
    , text
    , vector
    }
  default-extensions: {
    BinaryLiterals
    NoImplicitPrelude
    OverloadedStrings
    QuasiQuotes
  }
}
